# ros2_exp_detector

./: .gitignore  .gitmodules  LICENSE  README.md
src/darknet_ros_msgs/: CMakeLists.txt  package.xml
src/darknet_ros_msgs/msg/: TrackedObject.msg  TrackedObjects.msg  TrackedObjectsStamped.msg
src/detector_cpp/: CMakeLists.txt  package.xml
src/detector_cpp/include/detector_cpp/: detector.hpp
src/detector_cpp/src/: detector.cpp  detector_node.cpp
src/detector_py/: package.xml  setup.cfg  setup.py
src/detector_py/detector_py/: detector_node.py
src/detector_py/detector_py/src/: coco_class_labels.txt  detector.py
